Add tests for customer and tenant details nodes